--- a/color-pallet-generator/styles.css
+++ b/color-pallet-generator/styles.css
@@ -1,2 +1,67 @@
-body {
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+input[type='text'] {
+	padding: 10px;
+	font-size: 16px;
+	border: none;
+	outline: none;
+	border-radius: 8px 0 0 8px;
+}
+
+button {
+	margin-top: 10px;
+	padding: 10px 20px;
+	font-size: 16px;
+	background-color: #fff;
+	color: black;
+	border: none;
+	cursor: pointer;
+	border-radius: 0 8px 8px 0;
+	transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+	background-color: #000;
+	color: #fff;
+}
+
+.color {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	text-shadow: 1px 1px black;
+}
+
+.color:active {
+	opacity: 0.8;
+}
+
+.color span {
+	font-size: 1.75rem;
+	margin-bottom: 2rem;
+	color: #fff;
+	padding: 10px;
+}
+
+.contents {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+}
+
+#pallet-container {
+	background: #333;
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
 }
